# Neko-AgentOS

./: .cursorignore  .gitignore  README.md  pyproject.toml
agent_os/: __init__.py
agent_os/app/: cli.py  config.py
agent_os/app/schemas/: requests.py
agent_os/app/services/: orchestrator.py
agent_os/cognition/clarification/: question_node.py
agent_os/cognition/memory_router/: memory_router.py
agent_os/cognition/prompt_builder/: builder.py
agent_os/cognition/reasoning/: reasoning_node.py
agent_os/cognition/reflection/: reflection_node.py
agent_os/cognition/resource_manager/: resource_manager.py
agent_os/cognition/strategist/: strategist.py
agent_os/evaluation/regression/: runner.py
agent_os/memory/cache/: episodic_cache.py
agent_os/models/: json_parser.py
config/: agent_os.toml
docs/: Agent系统架构设计报告-v2.md  Agent系统架构设计报告.md  project-development-plan.md
tests/app/: test_cli.py  test_config.py
tests/cognition/: test_clarification_question_node.py  test_prompt_builder.py  test_reasoning_node.py  test_reflection_node.py  test_strategist.py
tests/evaluation/: test_regression_runner.py
tests/integration/: test_end_to_end.py
tests/investigation/: test_pipeline.py
tests/memory/: test_memory_layers.py
tests/models/: test_gateway.py  test_json_parser.py  test_litellm_provider.py
tests/observability/: test_trace_logger.py
tests/runtime/: test_blueprint_loader.py  test_capability_router.py  test_checkpoint_resume.py  test_graph_engine.py  test_main_graph_nodes.py  test_meta_router.py  test_state_models.py
tests/tools/: test_tool_runtime.py
(+37 files in other folders)
